--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "yace",
   "version": "0.0.5",
   "description": "tiny text editor with plugins",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/esm/index.esm.js",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/test.js",
     "build": "rm -rf ./dist && rollup -c",
-    "prettier:write": "prettier --write '{src,examples}/**/*'",
-    "prettier:check": "prettier --check '{src,examples}/**/*'",
+    "prettier:write": "prettier --write '{src,examples,test}/**/*'",
+    "prettier:check": "prettier --check '{src,examples,test}/**/*'",
     "release": "npx standard-version"
   },
   "keywords": [
@@ -32,7 +33,9 @@
     "prettier": "^2.0.5",
     "rollup": "^2.14.0",
     "rollup-plugin-multi-input": "^1.1.1",
-    "rollup-plugin-terser": "^6.1.0"
+    "rollup-plugin-terser": "^6.1.0",
+    "undom": "^0.4.0",
+    "zora": "^4.0.0"
   },
   "dependencies": {}
 }
